Added ArticleControllerTest (feature tests)
